# utils

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  package.xml  utilsConfig.cmake
cmake_modules/: helpers.cmake
include/: LimitValues.hpp  Log.h
include/common/: AutoCircularBuffer.hpp  CircularBuffer.h  CommonStructs.h  Crc.h  Position.h  ResourceFileHeader.h
include/common/defines/: EventDefines.h  ResourceDefines.h  SymbolNameDefines.h
include/concurrency/: ThreadSafeQueue.hpp
include/datatype/: EnumClassUtils.hpp  FloatingPoint.h  FloatingPointUtils.h  IntegerUtils.h  StringUtils.h
include/debug/: FunctionTracer.hpp  SignalHandler.h  StackTrace.hpp
include/drawing/: Color.h  CommonResourceStructs.h  DrawParams.h  Margins.h  Point.h  Rectangle.h  Sprite.h  WidgetAligner.h
include/resourceloader/: ResourceLoader.h
include/rng/: RNG.h
include/sound/: CommonSoundDefines.h  CommonSoundStructs.h  SoundWidgetEndCb.hpp
include/time/: Time.h  TimerDefines.h
include/utils/: ErrorCode.h  LimitValues.h  Log.h  LogBase.h  TimedLog.h  Unused.h
include/utils/class/: NonCopyable.h  NonMoveable.h
include/utils/common/: AutoCircularBuffer.h  AutoCircularBuffer.hpp  CircularBuffer.h  Crc.h  Position.h
include/utils/common/defines/: EventDefines.h  ResourceDefines.h  SymbolNameDefines.h
include/utils/concurrency/: ThreadPool.h  ThreadSafeQueue.h  ThreadSafeQueue.hpp
include/utils/data_type/: EnumClassUtils.h  EnumClassUtils.hpp  FloatingPoint.h  FloatingPointUtils.h  IntegerUtils.h  StringUtils.h
include/utils/datatype/: FloatingPointUtils.h  IntegerUtils.h
include/utils/debug/: FunctionTracer.h  FunctionTracer.hpp  SignalHandler.h  StackTrace.h  StackTrace.hpp  StrError.h
include/utils/design_pattern/: StateMachine.h
include/utils/drawing/: Color.h  DrawParams.h  Margin.h  Margins.h  Point.h  Rectangle.h  Sprite.h  WidgetAligner.h
include/utils/file/: IniFileParser.h  IniFileUtils.h  PpmDefines.h  PpmFileHandler.h
include/utils/file_system/: FileSystemUtils.h
include/utils/input/: InputEvent.h  TouchEntity.h  TouchEntityInterface.h
include/utils/input/defines/: EventDefines.h
include/utils/log/: Log.h  TimedLog.h
include/utils/rng/: RNG.h  Rng.h
include/utils/sound/: SoundWidgetEndCb.hpp
include/utils/time/: LocalTime.h  Time.h  TimerDefines.h
src/common/: CircularBuffer.cpp  Crc.cpp  Position.cpp  ResourceFileHeader.cpp
src/concurrency/: ThreadPool.cpp
src/data_type/: FloatingPointUtils.cpp  IntegerUtils.cpp  StringUtils.cpp
src/datatype/: FloatingPointUtils.cpp  IntegerUtils.cpp  StringUtils.cpp
src/debug/: SignalHandler.cpp  StackTrace.cpp  StrError.cpp
src/design_pattern/: StateMachine.cpp
src/drawing/: Color.cpp  Margin.cpp  Margins.cpp  Point.cpp  Rectangle.cpp  Sprite.cpp  WidgetAligner.cpp
src/file/: IniFileParser.cpp  IniFileUtils.cpp  PpmFileHandler.cpp
src/file_system/: FileSystemUtils.cpp
src/input/: InputEvent.cpp
src/log/: Log.cpp  LogBase.cpp
src/resourceloader/: ResourceLoader.cpp
src/rng/: RNG.cpp  Rng.cpp
src/sound/: CommonSoundDefines.cpp
src/time/: LocalTime.cpp  Time.cpp
src/utils/common/: CircularBuffer.cpp
src/utils/data_type/: IntegerUtils.cpp  StringUtils.cpp
src/utils/datatype/: FloatingPointUtils.cpp  IntegerUtils.cpp  StringUtils.cpp
src/utils/debug/: SignalHandler.cpp
src/utils/drawing/: Color.cpp  Point.cpp  Rectangle.cpp  Sprite.cpp  WidgetAligner.cpp
src/utils/file_system/: FileSystemUtils.cpp
src/utils/rng/: RNG.cpp
src/utils/time/: Time.cpp
