<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>utils</name>
  <version>1.0.0</version>
  <description>utils lib.</description>
  <license>MIT</license>
  <author>Zhivko Petrov</author>
  <maintainer email="zhivkopetrov90@gmail.com">Zhivko Petrov</maintainer>

  <buildtool_depend>cmake</buildtool_depend>
  
  <build_depend>cmake_helpers</build_depend>
  
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
